[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-voice"
version = "0.1.0"
description = "Talk to Claude about your projects over the phone"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Zishan", email = "zishan@example.com" }
]
keywords = ["claude", "voice", "ai", "coding", "vapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-code-voice = "claude_voice.cli:main"

[project.urls]
Homepage = "https://github.com/abracadabra50/claude-code-voice"
Repository = "https://github.com/abracadabra50/claude-code-voice"
Issues = "https://github.com/abracadabra50/claude-code-voice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_voice"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
